force-app/main/default/objects/Rate_Agreement_Scale_Definition__c/Rate_Agreement_Scale_Definition__c.object-meta.xml
<CustomObject>
    <label>Rate Agreement Scale Definition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Agreement Scale Definition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>