force-app/main/default/objects/Rate_Agreement_Scale_Definition__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>