force-app/main/default/objects/Rate_Agreement_Scale_Definition__c/fields/Rate_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreements__c</fullName>
    <label>Rate Agreements</label>
    <referenceTo>Rate_Agreements__c</referenceTo>
    <relationshipName>Rate_Agreement_Scale_definition</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>