force-app/main/default/objects/Rate_Agreement_Scale_Definition__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>